# a2a-mesh

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
docs/: a2a_protocol.md  architecture.md  deployment.md
examples/: code_review_pipeline.py  customer_support.py  demo.py  research_workflow.py
src/a2a_mesh/: __init__.py  __main__.py  _logging.py  auth.py  cli.py  coordinator.py  exceptions.py  gateway.py  health.py  mesh.py  models.py  registry.py  router.py  tracer.py
src/a2a_mesh/dashboard/: app.py
src/a2a_mesh/protocol/: a2a.py  mcp.py
tests/: conftest.py  test_auth.py  test_budget.py  test_capability_versioning.py  test_cli.py  test_coordinator.py  test_exceptions.py  test_gateway.py  test_health.py  test_mesh.py  test_models.py  test_protocol.py  test_registry.py  test_router.py  test_tracer.py
